<resources>
    <string name="app_name">Assessment1-Febrino</string>
    <string name="tvLogin">Login</string>
    <string name="btnLogin">Login</string>
    <string name="ptUsername">Username</string>
    <string name="ptFullname">Fullname</string>
    <string name="ptEmail">Email</string>
    <string name="username">username</string>
    <string name="ptPassword">Password</string>
    <string name="inputKosong">Input tidak boleh kosong!</string>
    <string name="tvWelcome">Welcome</string>
</resources>